Fixed spacing in the competition page

--- a/src/components/ContentCard/ContentCard.css
+++ b/src/components/ContentCard/ContentCard.css
@@ -122,8 +122,8 @@
 }
 
 .cardBody{
-  width: 350px;
-  height: 450px;
+  width: 325px;
+  height: 425px;
   margin: 25px auto;
   background-color: white;
   padding: 10px;
