--- a/src/components/FormCompetition/FormCompetition.css
+++ b/src/components/FormCompetition/FormCompetition.css
@@ -1,16 +1,17 @@
 .title > h3{
 text-align: center;
 margin-bottom: 20px;
-font-size: 30px;
-padding-top: 20px;
+font-size: 40px;
+padding-top: 50px;
 }
 
 .container-competitionForm{
-    border: solid blue;
+    border: solid #144a9a;
     border-radius: 20px;
     width: 800px;
     margin: auto;
     padding: 20px;
+    margin-bottom: 100px;
     
 }
 
